# myaruco

./: .gitignore  README.md
linux/: CMakeLists.txt  myaruco.cpp
windows/myaruco/: myaruco.sln
windows/myaruco/myaruco/: myaruco.cpp  myaruco.vcxproj  myaruco.vcxproj.filters
windows/opencv/: install.sh
